# keyword-categorizer

./: .env  .gitignore  Global keywords list.csv  README.md  keywords.csv  main.py  process_keywords.py  pyproject.toml  requirements.txt  run_setup.py  violation_patterns.json  violation_patterns_optimized.csv  violation_patterns_optimized.json
brain_api/: __init__.py
